fixed default z-index for most components, open link api is more generic

--- a/thunderstorm/src/main/frontend/components/TS_MemoryMonitor/TS_MemoryMonitor.scss
+++ b/thunderstorm/src/main/frontend/components/TS_MemoryMonitor/TS_MemoryMonitor.scss
@@ -27,4 +27,5 @@
   top: calc(100% - 80px);
   left: calc(100% - 160px);
   pointer-events: none;
+  z-index: 500;
 }
