--- a/thunderstorm/src/main/frontend/components/TS_Notifications/TS_Notifications.scss
+++ b/thunderstorm/src/main/frontend/components/TS_Notifications/TS_Notifications.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
-  z-index: 400;
+  z-index: 500;
 
   .ts-notification-container {
     isolation: isolate;
