--- a/thunderstorm/src/main/frontend/components/TS_Toaster/TS_ToastOverlay.scss
+++ b/thunderstorm/src/main/frontend/components/TS_Toaster/TS_ToastOverlay.scss
@@ -28,6 +28,7 @@
   display: inline-block;
   right: auto;
   margin: 16px;
+  z-index: 400;
   background-color: #e8e8e8;
 
   .info {
