--- a/thunderstorm/src/main/frontend/components/TS_Tooltip/TS_TooltipOverlay.scss
+++ b/thunderstorm/src/main/frontend/components/TS_Tooltip/TS_TooltipOverlay.scss
@@ -24,6 +24,7 @@
   border-radius: 3px;
   box-shadow: 0 0 4px 0 #00000066;
   color: #333435;
+  z-index: 300;
   font-size: 13px;
   padding: 1px 3px;
   position: fixed;
